--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,28 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --color-text: #ffffff;
+    --color-error: #980000;
+    --color-paper: #232323;
+    --color-primary: #009688;
+    --color-background: #000000;
+    --color-primary-contrast: #ffffff;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--color-background);
+  color: var(--color-text);
+  width: 100vw;
+  height: 100vh;
+  text-underline-offset: 8px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  opacity: 50%;
+  transition: 100ms;
 }
